[gd_scene load_steps=20 format=2]

[ext_resource path="res://scenes/scripts/GUI.gd" type="Script" id=1]
[ext_resource path="res://sprites/Barra-vazia4V2.0.png (3).png" type="Texture" id=2]
[ext_resource path="res://sprites/Barra-preenchimentov2.png" type="Texture" id=3]
[ext_resource path="res://sprites/Barra-vaziav2.png" type="Texture" id=4]
[ext_resource path="res://sprites/Barra-preenchimento3.png" type="Texture" id=5]
[ext_resource path="res://sprites/barra-fundov2.png" type="Texture" id=6]
[ext_resource path="res://sprites/barra-fundo2.png" type="Texture" id=7]
[ext_resource path="res://sprites/Barra-preenchimento.2png.png" type="Texture" id=8]
[ext_resource path="res://sprites/barra-fundo3.png" type="Texture" id=9]
[ext_resource path="res://sprites/Barra-preenchimentoGRANDE.png.png" type="Texture" id=10]
[ext_resource path="res://sprites/barra-fundo4_1.png" type="Texture" id=11]
[ext_resource path="res://sprites/water2.png" type="Texture" id=12]
[ext_resource path="res://sprites/saco2.png" type="Texture" id=13]
[ext_resource path="res://sprites/espirito.png" type="Texture" id=14]
[ext_resource path="res://scenes/TileMap.tscn" type="PackedScene" id=15]
[ext_resource path="res://resources/kongtext/kongtext.ttf" type="DynamicFontData" id=16]

[sub_resource type="DynamicFont" id=8]
size = 128
outline_size = 16
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 16 )

[sub_resource type="DynamicFont" id=9]
size = 128
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 16 )

[sub_resource type="Theme" id=3]
default_font = SubResource( 9 )
RichTextLabel/fonts/normal_font = SubResource( 8 )

[node name="GUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Container" type="Container" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -440.0
margin_bottom = -230.0

[node name="FinalResourceBar" type="TextureProgress" parent="Container"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 242.0
margin_right = 420.0
margin_bottom = 270.0
size_flags_horizontal = 3
size_flags_vertical = 3
value = 20.0
texture_under = ExtResource( 11 )
texture_over = ExtResource( 2 )
texture_progress = ExtResource( 10 )
nine_patch_stretch = true

[node name="HBoxContainer" type="HBoxContainer" parent="Container"]
margin_left = 50.0
margin_top = 10.0
margin_right = 430.0
margin_bottom = 38.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Container/HBoxContainer"]
margin_right = 124.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="Container/HBoxContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 23.0
margin_bottom = 28.0
size_flags_horizontal = 8
size_flags_vertical = 8
texture = ExtResource( 13 )
stretch_mode = 3

[node name="Resource1Bar" type="TextureProgress" parent="Container/HBoxContainer/HBoxContainer"]
margin_left = 27.0
margin_right = 124.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 3
value = 50.0
texture_under = ExtResource( 6 )
texture_over = ExtResource( 4 )
texture_progress = ExtResource( 3 )
nine_patch_stretch = true

[node name="HBoxContainer2" type="HBoxContainer" parent="Container/HBoxContainer"]
margin_left = 128.0
margin_right = 252.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="Container/HBoxContainer/HBoxContainer2"]
margin_right = 11.0
margin_bottom = 28.0
texture = ExtResource( 12 )

[node name="Resource2Bar" type="TextureProgress" parent="Container/HBoxContainer/HBoxContainer2"]
margin_left = 15.0
margin_right = 124.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 3
value = 50.0
texture_under = ExtResource( 7 )
texture_over = ExtResource( 4 )
texture_progress = ExtResource( 8 )
nine_patch_stretch = true

[node name="HBoxContainer3" type="HBoxContainer" parent="Container/HBoxContainer"]
margin_left = 256.0
margin_right = 380.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="Container/HBoxContainer/HBoxContainer3"]
margin_top = 7.0
margin_right = 17.0
margin_bottom = 28.0
size_flags_horizontal = 8
size_flags_vertical = 8
texture = ExtResource( 14 )
stretch_mode = 6

[node name="Resource3Bar" type="TextureProgress" parent="Container/HBoxContainer/HBoxContainer3"]
margin_left = 21.0
margin_right = 124.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 3
value = 50.0
texture_under = ExtResource( 9 )
texture_over = ExtResource( 4 )
texture_progress = ExtResource( 5 )
nine_patch_stretch = true

[node name="ViewportContainer" type="ViewportContainer" parent="Container"]
margin_right = 480.0
margin_bottom = 270.0

[node name="Viewport" type="Viewport" parent="Container/ViewportContainer"]
size = Vector2( 480, 270 )
handle_input_locally = false
hdr = false
usage = 0
render_target_update_mode = 3

[node name="TileMap" parent="Container/ViewportContainer/Viewport" instance=ExtResource( 15 )]

[node name="RichTextLabel4" type="RichTextLabel" parent="Container/ViewportContainer/Viewport/TileMap"]
light_mask = 0
margin_left = -381.0
margin_top = -44.0
margin_right = 368.0
margin_bottom = 276.0
theme = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[center][shake]START"
text = "START"

[node name="Saco" type="Sprite" parent="Container/ViewportContainer/Viewport"]
position = Vector2( 1114, 1670 )
scale = Vector2( 15, 15 )
texture = ExtResource( 13 )

[node name="Agua" type="Sprite" parent="Container/ViewportContainer/Viewport"]
position = Vector2( 2467, -669 )
scale = Vector2( 15, 15 )
texture = ExtResource( 12 )

[node name="Espirito" type="Sprite" parent="Container/ViewportContainer/Viewport"]
position = Vector2( -2232, -601 )
scale = Vector2( 15, 15 )
texture = ExtResource( 14 )

[node name="Camera2D" type="Camera2D" parent="Container/ViewportContainer/Viewport"]
position = Vector2( -192, 232 )
current = true
zoom = Vector2( 14, 14 )
